# ultimate_guess_number

./: README.md  guess_game.py  pyproject.toml  setup.cfg  test_guess_game.py  tox.ini
.github/workflows/: main.yml
src/ultimate_guess_number/: __init__.py  ultimate_guess_game.py
tests/: test_guess_game.py
