[metadata]
name = ultimate_guess_game
version = 0.2.0
description = The Ultimate CLI Number Guessing Game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nichney/ultimate_guess_number
author = Kirill O.
author_email = kirillosm09@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
